solucion del check

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <input type="password" name="txtpassword" id="txtpassword" class="form-control form-control-lg" />
                 <label class="form-label">Contraseña</label>
                 <br>
-                <input type="checkbox" class="form-check-input" onclick="contraseña()">Mostrar contraseña
+                <input type="checkbox" class="form-check-input" id="chec" onclick="contraseña()"><label for="chec">Mostrar contraseña</label> 
               </div>
               <select name="tipo" class="form-select" aria-label="Default select example">
                 <option value="0" style="display:none;"><label>Seleccionar</label></option>
